# GraphAttentionNetworks

./: .gitignore  .pre-commit-config.yaml  Demo Video Script — Graph Attent.txt  Graph Attention Networks on the Cora Dataset.docx  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml
notebooks/: gat_cora.ipynb  gat_gora.ipynb
results/: metrics.json  metrics_epoch.csv  report.txt
src/graph_attention_networks/: cli.py  eval.py  model.py  train.py
tests/: test_cli_eval.py  test_eval_confmat.py  test_smoke.py
