[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-attention-networks"
version = "0.0.1"
requires-python = ">=3.10"
description = "Graph Attention Networks on Cora (PyTorch Geometric)."

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
